	elements.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Split advertising code from 'common/lwrp_server.cpp' and
	'common/lwrp_server.h' into 'common/adv_server.cpp' and
	'common/adv_server.h'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Removed clock code from 'common/lwrp_server.cpp' and
	'common/lwrp_server.h'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'IP' command in 'common/lwrp_server.cpp'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Added an init script in 'syd/rc.syd.in'.
2014-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Added includes in 'syd/rtp_callback.cpp', 'syd/syd.cpp'
	to fix broken build under Debian 7.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Added 'astring.cpp' and 'astring.h' to the 'distclean'
	target in 'syd/Makefile.am'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SWITCHYARD_VERSION' define in 'common/config.h'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'read_only' parameter for AdvServer in
	'common/adv_server.cpp'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'SWITCYARD_SLOTS' define from 'common/config.h'.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.0.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed varioous build system issues.
2014-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.1.
2014-07-03 Fred Gleason <fredg@paravelsystems.com>
	* Added 'src_meter' and 'dst_meter' public members to
	'Routing' in 'common/routing.cpp' and 'common/routing.h'.
	* Added 'Routing::srcMeterLevel()' and 'Routing::dstMeterLevel()'
	methods in 'common/routing.cpp' and 'common/routing.h'.
	* Added an 'AdvReader' class in 'common/adv_reader.cpp' and
	'common/adv_reader.h'.
2014-07-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.